 - Don't loose editbox contents when pressing up, then down arrow
   (Ricky Clarkson).
 - Fixed missing dcc flag on new ignores via gui.
 - Fixed missing separator bar on PseudoColor displays.
 - Fixed some 64-bit issues (xc205-fix64bit.diff).
 - Apply tint changes instantly.
 - Fixed DCC resume with mirc >= 6.1.
 - Python plugin changes:
	* Fixed the reentrancy problem which made xchat freeze when some
     python code made xchat trigger a python callback somewhere.
   * Implemented xchat_emit_print() and xchat_get_prefs() support.
   * Fixed softspace support for python 2.3. This problem was making
     print statements yield an extra space at the next line start.
   * Other minor changes.
	(Gustavo Niemeyer, Gustavo J. A. M. Carneiro, Marko Kreen).
 - Fixed request of a MODE on a channel you're not in changing the
   current titlebar [820998].
 - Restored compatibility with older Perl that lacks call_pv().
 - Use sigaction inplace of signal() for better compatibility.
 - Win32: Don't try to open logfiles with a "\" in them, windows wont
   allow it.
 - Backported HTTP authentication code from 1.8.11 (you can now
   specify a username and password for HTTP proxies).
 - 
 - 
 - Smaller bug fixes: [822199] [786267] [783172] [811971] [756048].


----------------------------------------------------------------------
 2.0.5
----------------------------------------------------------------------

 - Updated translations (ca, fi, lt, nl, sk, sv, zh_CN).
 - Fixed detection of Python 2.3 in configure script (anonymous).
 - DCC Send file-selection dialog now supports multi-select.
 - Reset away status after auto-reconnect from a ping timeout.
 - Perl: Fixed IRC::user_info always matching the first entry.
 - More C89 fixes for non-gcc compilers (Albert Chin). [781809].
 - xtext: now double buffered and flicker free. Also some efficiency
   tweaks for exposure events and multi-wrapped lines.
 - Removed buggy numeric 338 support [783945].